# material-color-utilities-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  lint.ps1
.github/workflows/: ci.yml
benches/: color_benchmarks.rs
concepts/: color_spaces.md
dev_guide/: creating_color_scheme.md  extracting_colors.md  refining_contrast.md
kotlin/: .gitignore  README.md
kotlin/src/: ExtractImageColors.kt  GenerateColors.kt  Main.kt
src/: lib.rs
src/abstractions/: contrast_abstractions.rs  error.rs  image_abstractions.rs  mod.rs  serde_impls.rs  structs.rs  theme_abstractions.rs
src/blend/: blend.rs  blend_functions.rs  mod.rs
src/contrast/: contrast.rs  contrast_utils.rs  mod.rs
src/dislike/: dislike_analyzer.rs
src/dynamic/: color_spec.rs  color_spec_2021.rs  color_spec_2025.rs  color_spec_2026.rs  color_specs.rs  contrast_curve.rs  dynamic_color.rs  dynamic_scheme.rs  material_dynamic_colors.rs  mod.rs  tone_delta_pair.rs  variant.rs
src/dynamiccolor/: color_spec.rs  color_spec_2021.rs  color_spec_2025.rs  color_spec_2026.rs  color_specs.rs  contrast_curve.rs  dynamic_color.rs  dynamic_scheme.rs  material_dynamic_colors.rs  mod.rs  tone_delta_pair.rs  variant.rs
src/hct/: cam16.rs  hct.rs  hct_color.rs  hct_solver.rs  mod.rs  viewing_conditions.rs
src/helpers/: contrast_helpers.rs  error.rs  image_extraction_helpers.rs  mod.rs  theme_helpers.rs
src/palettes/: core_palettes.rs  mod.rs  tonal_palette.rs
src/quantize/: mod.rs  point_provider.rs  point_provider_lab.rs  quantizer.rs  quantizer_celebi.rs  quantizer_map.rs  quantizer_wsmeans.rs  quantizer_wu.rs
src/scheme/: mod.rs  scheme_cmf.rs  scheme_content.rs  scheme_expressive.rs  scheme_fidelity.rs  scheme_fruit_salad.rs  scheme_monochrome.rs  scheme_neutral.rs  scheme_rainbow.rs  scheme_tonal_spot.rs  (+1 more)
tests/: integration_tests.rs  reference_output.txt  test_dynamic_colors.rs  test_image_color_extraction.rs
(+25 files in other folders)
