[package]
name = "material-color-utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.0"
indexmap = "2.13.0"

[dev-dependencies]
color-eyre = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"
rand = "0.10.0"
image = "0.25.9"
criterion = "0.8.2"

[[bench]]
name = "color_benchmarks"
harness = false
