[package]
name = "material-color-utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.0"
indexmap = "2.13.0"
thiserror = "2.0.18"
image = { version = "0.25.9", optional = true }

[dev-dependencies]
color-eyre = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"
rand = "0.10.0"
criterion = "0.8.2"

[features]
default = ["image"]
image = ["dep:image"]

[[bench]]
name = "color_benchmarks"
harness = false
