[package]
name = "material-color-utils"
version = "0.1.0"
description = "Color libraries for Google's Material You"
license-file = "LICENSE"
edition = "2024"
homepage = "https://github.com/RuurdBijlsma/material-color-utilities-rs"
repository = "https://github.com/RuurdBijlsma/material-color-utilities-rs"
exclude = ["kotlin", "dev_guide", "concepts"]

[dependencies]
bon = "3.9.0"
papaya = "0.2.3"
indexmap = "2.13.0"
thiserror = "2.0.18"
image = { version = "0.25.9", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
color-eyre = "0.6.5"
serde_json = "1.0"
criterion = "0.8.2"
statrs = "0.18.0"
rand = "0.10.0"

[features]
default = ["image", "serde", "rayon"]
image = ["dep:image"]
serde = ["dep:serde", "papaya/serde"]
rayon = ["dep:rayon", "image?/rayon"]

[[bench]]
name = "color_benchmarks"
harness = false
